Add snow hydrology internship to resume.

--- a/index.html
+++ b/index.html
@@ -224,6 +224,21 @@
                     <h1 class="resumeHeader">Experience</h1>
                     <div class="experienceHeader">
                         <div class="leftColumn">
+                            <p><b>Snow Hydrology Research Intern</b> | <i>Institute of Arctic and Alpine Research</i></p>
+                        </div>
+                        <div class="rightColumn">
+                            January 2025 -- Present
+                        </div>
+                    </div>
+                    <div class="experienceBody">
+                        <ul>
+                            <li>Collect snow stratigraphy data from multiple high elevation remote sites. This data consists of snow density, snow water equivalent, grain size/type, depth, and temperature.</li>
+                            <li>Data is published through the Niwot Ridge LTER web portal.</li>
+                            <li>Present poster on my work at the Hydrologic Sciences Research Symposium.</li>
+                        </ul>
+                    </div>
+                    <div class="experienceHeader">
+                        <div class="leftColumn">
                             <p><b>Computer Science Department Assistant</b> | <i>University of Colorado Boulder</i></p>
                         </div>
                         <div class="rightColumn">
